<resources>
    <string name="app_name">Complain+</string>
    <string name="tagline">Complain Reporting Application</string>

    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>


    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_register_link">No Account? Get registered now!</string>
    <string name="btn_login_link">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>

    <string name="form_note">Fill out the complaint form by adding the details in given fields. You can easily
    capture image of the complain.</string>
    <string name="btn_submit">Submit Complaint</string>
    <string name="description">Enter details of the complain</string>
    <string name="card_1">Lodge Complaint</string>
    <string name="card_2">View Complaint</string>

    <string-array name="severity">
        <item>--Select Severity--</item>
        <item>Critical</item>
        <item>Major</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>

    <string-array name="category">
        <item>--Select Category--</item>
        <item>Water Complain</item>
        <item>Electricity Complain</item>
        <item>Disaster Relief</item>
        <item>Gas Complain</item>
        <item>Area Complain</item>
        <item>Health/Education Complain</item>
        
    </string-array>

</resources>
