<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddComplainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_note"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                />

            <Button
                android:id="@+id/captureimageBtn"
                android:layout_width="200dp"
                android:padding="10dp"
                android:background="@drawable/outline_button"
                android:layout_height="wrap_content"
                android:text="Capture Image"
                android:textColor="@color/colorAccent"
                android:drawableLeft="@drawable/ic_photo_camera"/>


            <ImageView
                android:id="@+id/capturedimageIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="Category"
                android:textColor="@color/colorTextView"
                android:textSize="16sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/categorySpinner"
                android:entries="@array/category"
                android:background="@drawable/spinner_border"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="Severity"
                android:textColor="@color/colorTextView"
                android:textSize="16sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/severitySpinner"
                android:entries="@array/severity"
                android:background="@drawable/spinner_border"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="Description"
                android:textColor="@color/colorTextView"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:hint="@string/description"
                android:gravity="top|left"
                android:minLines="2"
                android:maxLines="10"
                android:layout_marginTop="5dip"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scrollbars="vertical" />


            <Button
                android:id="@+id/submitComplainBtn"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>