<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Home Page Header with image and text-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/background_header">

                <Button
                    android:id="@+id/sign_out"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@color/colorAccent"
                    android:text="@string/btn_sign_out"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textSize="38sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tagline"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    />
                <TextView
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="@string/email_id"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <!--Home Page Cardview Tile with image, text and button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="210dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/outline_corners">


                            <ImageView
                                android:id="@+id/addComplainIV"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_add"
                                android:layout_centerInParent="true"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_1"
                                android:textAllCaps="true"
                                android:textSize="16sp"
                                android:layout_below="@+id/addComplainIV"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/colorWhite"
                                android:layout_marginBottom="10dp"/>

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/addComplaintBtn"
                                android:background="@android:color/transparent"/>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/outline_corners">


                            <ImageView
                                android:id="@+id/complainIV"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_view"
                                android:layout_centerInParent="true"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_2"
                                android:textAllCaps="true"
                                android:textSize="16sp"
                                android:layout_below="@+id/complainIV"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/colorWhite"
                                android:layout_marginBottom="10dp"/>

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/viewComplaintBtn"
                                android:background="@android:color/transparent"/>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

    </LinearLayout>


</LinearLayout>